--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -47,18 +47,21 @@ $max-width: 1400px;
   max-width: $max-width; // 슬라이더와 동일한 가로폭으로 설정
   margin: 0 auto; // 가운데 정렬
   font-family: 'Noto Sans KR', sans-serif;
+  font-size: 1.5rem;
+  margin-top: 60px;
+
 
   .home-title {
     opacity: 0;
     animation: smoothAppear 1s forwards;
     animation-delay: 0.5s;
     margin: 15px 0;
-    font-size: 2.4rem;
+    font-size: 2.0rem;
     font-weight: bold;
     color:black;
 
     span {
-      font-size: 2.7rem;
+      font-size: 2.0rem;
       font-family: "Jua", sans-serif;
       font-weight: 400;
       font-style: normal;
@@ -105,10 +108,9 @@ $max-width: 1400px;
   }
 }
 
-// Layout Container
 .layout-container {
   display: grid; // Grid 레이아웃 사용
-  grid-template-columns: 1fr 2fr; // 첫 번째 열은 1배수, 두 번째 열은 2배수
+  grid-template-columns: 2fr 1fr; // 첫 번째 열은 1배수, 두 번째 열은 2배수
   max-width: $max-width; // 슬라이더와 동일한 가로폭으로 설정
   gap: 20px; // 요소 간의 간격 설정
   margin: 0 auto; // 가운데 정렬
@@ -191,4 +193,56 @@ $max-width: 1400px;
       color: gray; // Change color for details
     }
   }
+}
+
+/* 게시글 카드 컨테이너 (카드들을 가로로 나란히 배치) */
+.post-card-container {
+  display: flex;            /* Flexbox 사용 */
+  flex-wrap: wrap;         /* 카드가 넘칠 경우 다음 줄로 이동 */
+  gap: 20px;               
+  margin: 5px 0;
+  justify-content: flex-start; /* 왼쪽 정렬 */
+}
+
+/* 게시글 카드 (각 카드 내 텍스트는 세로 정렬 유지) */
+.post-card {
+  width: 280px;              /* 각 카드의 너비를 설정 (가로로 나란히 배치할 수 있는 크기) */
+  background-color: #ffffff;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 5px;     /* 각 카드 사이의 간격 */
+  transition: transform 0.2s; /* 카드 호버 효과를 위한 전환 설정 */
+}
+
+.post-card:hover {
+  transform: scale(1.03); 
+}
+
+/* 카드 내부 콘텐츠 스타일 */
+.post-card-content {
+  display: flex;
+  flex-direction: column; /* 세로 정렬 */
+}
+
+/* 카드 제목 */
+.post-card-title {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 12px; 
+  color: black;
+}
+
+/* 카드 작성자와 작성 기간 */
+.post-card-details {
+  margin-bottom: 8px; 
+  color: gray;
+  font-size: 13px;
+}
+
+/* 카드 기간 */
+.post-card-period {
+  margin-top: 8px; /* 위쪽 여백 추가 */
+  color: gray;
+  font-size: 13px;
 }
