--- a/src/Board/Form/PostForm.css
+++ b/src/Board/Form/PostForm.css
@@ -19,6 +19,7 @@
     font-size: 32px;
     margin-bottom: 30px;
     color: #333;
+    text-align: center;
   }
 
   /* 기존 스타일을 유지하면서 start-date와 end-date 스타일 추가 */
@@ -46,7 +47,7 @@
 }
 
   hr { 
-    margin-bottom: 40px; 
+    margin-bottom: 20px; 
     border: 1px solid #ddd;
   }
   
@@ -106,8 +107,8 @@
     background: #ffffff;
     border: none;
     border-radius: 12px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    margin-bottom: 50px;
     font-family: 'TTLaundryGothicB', sans-serif;
 }
 
