--- a/src/components/weather/WeatherInfo.scss
+++ b/src/components/weather/WeatherInfo.scss
@@ -3,10 +3,23 @@
   flex-direction: column;
   align-items: center;
   font-family: 'Noto Sans KR', sans-serif;
-  margin-top: 50px;
+  margin-top: 30px;
+  margin-left: 20px;
   background-color: #ffffff; // 배경색
   border-radius: 10px; // 모서리 둥글게
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); // 그림자 추가
+  padding: 10px 20px;
+  height: 420px;
+
+  .weather-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center; // Horizontal centering
+    justify-content: center; // Vertical centering
+    width: 100%;
+    height: 100%;
+  }
+
 
   h4 {
     margin-bottom: 10px;
@@ -26,6 +39,7 @@
     background-color: #f1f8f4;
     cursor: pointer;
     transition: background-color 0.3s ease, border-color 0.3s ease;
+    
   }
 
   #parentRegionSelect:focus,
@@ -40,6 +54,7 @@
     text-align: center;
     font-size: 18px;
     color: #333;
+    
 
     .weather-details {
       display: flex;
