--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -2,31 +2,10 @@
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
 
-// 공통 max-width 설정
-$max-width: 1400px;
 
-.home-slider {
-  width: 120%;
-  max-width: $max-width;
-  margin: 0 auto;
+$max-width: 1600px;
 
-  .slide {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 400px; // 슬라이드 높이 설정
-    background-size: cover;
-    background-position: center;
-  }
-
-  .slide:first-child {
-    background-image: url('/assets/banner1.jpg'); // assets 폴더 내 banner1 이미지 경로
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-}
-
+// 애니메이션
 @keyframes smoothAppear {
   from {
     opacity: 0;
@@ -38,21 +17,22 @@ $max-width: 1400px;
   }
 }
 
+// 메인 화면
 .home-wrapper {
+  border-radius: 10px;
   padding: 5rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  max-width: $max-width; // 슬라이더와 동일한 가로폭으로 설정
-  margin: 0 auto; // 가운데 정렬
+  max-width: $max-width; 
+  margin: 0 auto; 
   font-family: 'Noto Sans KR', sans-serif;
   font-size: 1.5rem;
   margin-top: 60px;
 
 
   .home-title {
-    opacity: 0;
     animation: smoothAppear 1s forwards;
     animation-delay: 0.5s;
     margin: 15px 0;
@@ -65,12 +45,11 @@ $max-width: 1400px;
       font-family: "Jua", sans-serif;
       font-weight: 400;
       font-style: normal;
-      color: black; // "가보자Go" 텍스트를 검정색으로 변경
+      color: black; 
     }
   }
 
   .home-contents {
-    opacity: 0;
     animation: smoothAppear 1s forwards;
     animation-delay: 1s;
     margin: 15px 0;
@@ -95,137 +74,138 @@ $max-width: 1400px;
     margin-top: 20px;
 
     &:hover {
-      background-color: #76c776; /* 약간 더 짙은 초록색 */
+      background-color: #76c776; 
       transform: translateY(-2px);
       box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
     }
 
     &:active {
-      background-color: #5fa65f; /* 클릭 시 색상 */
+      background-color: #5fa65f; 
       transform: translateY(0);
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     }
   }
 }
 
+// 최근 게시글, 로그인 영역
 .layout-container {
-  display: grid; // Grid 레이아웃 사용
-  grid-template-columns: 2fr 1fr; // 첫 번째 열은 1배수, 두 번째 열은 2배수
-  max-width: $max-width; // 슬라이더와 동일한 가로폭으로 설정
-  gap: 20px; // 요소 간의 간격 설정
-  margin: 0 auto; // 가운데 정렬
-  margin-top: 20px; // 위쪽 여백 추가
+  display: grid;
+  grid-template-columns: 2fr 1fr; 
+  max-width: $max-width; 
+  gap: 20px; 
+  margin: 0 auto; 
+  margin-top: 20px; 
 
-  // 날씨 정보 스타일
+  
   .weather-info {
-    padding: 20px; // 여백 추가
-    background-color: #f5f5f5; // 배경색
-    border-radius: 10px; // 모서리 둥글게
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); // 그림자 추가
+    padding: 20px; 
+    background-color: #f5f5f5; 
+    border-radius: 10px; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
   }
 
   .home-container {
-    padding: 20px; // 여백 추가
-    background-color: #ffffff; // 배경색
-    border-radius: 10px; // 모서리 둥글게
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); // 그림자 추가
+    padding: 20px; 
+    background-color: #ffffff; 
+    border-radius: 10px; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
     margin-top: 50px;
 
     h1 {
-      margin-bottom: 20px; // 제목 아래 여백 추가
-      color: black; // 최근 게시글 제목을 검정색으로 변경
+      margin-bottom: 20px; 
+      color: black; 
     }
 
-    // 최근 게시글 제목 스타일
+    
     a {
-      display: flex; // 플렉스 박스 사용
-      justify-content: space-between; // 제목과 세부정보 간의 공간 분배
-      align-items: center; // 수직 정렬
-      margin: 10px 0; // 각 링크 사이 여백 추가
-      text-decoration: none; // 밑줄 제거
-      color: black; // 제목 색상 연두색
-      font-weight: bold; // 제목 두껍게
-      transition: color 0.3s; // 색상 전환 효과
+      display: flex; 
+      justify-content: space-between; 
+      align-items: center; 
+      margin: 10px 0; 
+      text-decoration: none; 
+      color: black; 
+      font-weight: bold; 
+      transition: color 0.3s; 
 
       &:hover {
-        color: darken(#4caf50, 10%); // 마우스 오버 시 색상 변경
+        color: darken(#4caf50, 10%); 
       }
 
       .post-details {
-        margin-left: auto; // 오른쪽 끝으로 이동
-        font-size: 0.9rem; // 글씨 크기 조절
-        color: gray; // 글씨 색상 조절
-        display: flex; // 플렉스 박스 사용
-        gap: 10px; // 요소 간의 간격
-        align-items: center; // 수직 정렬
+        margin-left: auto; 
+        font-size: 0.9rem; 
+        color: gray; 
+        display: flex; 
+        gap: 10px; 
+        align-items: center; 
       }
     }
   }
 
   .post-item {
-    display: flex; // Use flexbox for alignment
-    align-items: center; // Vertically center items
-    margin-bottom: 10px; // Space between posts
-    padding: 15px; // Add padding for better spacing
-    border: 1px solid #e0e0e0; // Add a light border around each post
-    border-radius: 8px; // Rounded corners for posts
-    background-color: #fafafa; // Light background color for posts
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); // Add a subtle shadow for depth
+    display: flex; 
+    align-items: center; 
+    margin-bottom: 10px; 
+    padding: 15px; 
+    border: 1px solid #e0e0e0; 
+    border-radius: 8px; 
+    background-color: #fafafa; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
 
     .post-index {
-      margin-right: 8px; // Space between index number and title
-      font-weight: bold; // Make the index number bold
+      margin-right: 8px; 
+      font-weight: bold; 
     }
 
     .post-title {
-      color: #4caf50; // Change title color to light green
-      text-decoration: none; // Remove underline from links
-      transition: color 0.3s; // Smooth transition for hover effect
+      color: #4caf50; 
+      text-decoration: none; 
+      transition: color 0.3s; 
 
       &:hover {
-        color: #2e7d32; // Darker shade on hover
+        color: #2e7d32; 
       }
     }
 
     .post-details {
-      margin-left: auto; // Pushes the details to the right
-      font-size: 0.9rem; // Adjust font size
-      color: gray; // Change color for details
+      margin-left: auto; 
+      font-size: 0.9rem; 
+      color: gray; 
     }
   }
 }
 
-/* 게시글 카드 컨테이너 (카드들을 가로로 나란히 배치) */
+
 .post-card-container {
-  display: flex;            /* Flexbox 사용 */
-  flex-wrap: wrap;         /* 카드가 넘칠 경우 다음 줄로 이동 */
+  display: flex;            
+  flex-wrap: wrap;         
   gap: 20px;               
   margin: 5px 0;
-  justify-content: flex-start; /* 왼쪽 정렬 */
+  justify-content: flex-start; 
 }
 
-/* 게시글 카드 (각 카드 내 텍스트는 세로 정렬 유지) */
+
 .post-card {
-  width: 280px;              /* 각 카드의 너비를 설정 (가로로 나란히 배치할 수 있는 크기) */
+  width: 322px;              
   background-color: #ffffff;
   padding: 10px;
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin-bottom: 5px;     /* 각 카드 사이의 간격 */
-  transition: transform 0.2s; /* 카드 호버 효과를 위한 전환 설정 */
+  margin-bottom: 5px;     
+  transition: transform 0.2s; 
 }
 
 .post-card:hover {
   transform: scale(1.03); 
 }
 
-/* 카드 내부 콘텐츠 스타일 */
+
 .post-card-content {
   display: flex;
-  flex-direction: column; /* 세로 정렬 */
+  flex-direction: column; 
 }
 
-/* 카드 제목 */
+
 .post-card-title {
   font-size: 16px;
   font-weight: bold;
@@ -233,16 +213,160 @@ $max-width: 1400px;
   color: black;
 }
 
-/* 카드 작성자와 작성 기간 */
+
 .post-card-details {
   margin-bottom: 8px; 
   color: gray;
   font-size: 13px;
 }
 
-/* 카드 기간 */
+
 .post-card-period {
-  margin-top: 8px; /* 위쪽 여백 추가 */
+  margin-top: 8px; 
   color: gray;
   font-size: 13px;
+}
+
+
+.home-login-form {
+  display: flex;             
+  justify-content: center;   
+  align-items: center;       
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  height: 282px;
+  margin-top: 47px;
+}
+
+.login-wrapper {
+  display: flex;
+  align-items: center; 
+  justify-content: space-between; 
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  width: 100%;
+  margin: 10px;
+}
+
+.non-login-wrapper {
+  justify-content: center;      
+  align-items: center;          
+  text-align: center;           
+}
+
+.info {
+  display: flex;
+}
+
+.Profile {
+  margin-right: 20px; 
+  display: flex; 
+  align-items: center; 
+}
+
+.HomeProfileImage {
+  width: 60px; 
+  height: 60px; 
+  border-radius: 50%; 
+  object-fit: cover; 
+}
+
+.userInfo {
+  display: flex; 
+  flex-direction: column; 
+  margin-top: 5px;
+}
+
+.username {
+  font-size: 16px; 
+  margin-bottom: 5px; 
+}
+
+.email {
+  font-size: 14px; 
+  color: #666; 
+}
+
+.logout-button {
+  padding: 10px 15px; 
+  background-color: lightseagreen; 
+  color: white; 
+  border: none; 
+  border-radius: 5px; 
+  cursor: pointer; 
+  transition: background-color 0.3s; 
+  margin-bottom: 15px;
+}
+
+.logout-button:hover {
+  background-color: #4CAF50; 
+}
+
+
+.info-text {
+  font-size: 15px;          
+  color: #666;              
+  margin-bottom: 10px;      
+}
+
+
+.login {
+  padding: 10px 20px;
+  font-size: 18px;
+  border: none;
+  background-color: #4CAF50;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.login:hover {
+  background-color: #45a049; 
+}
+
+.signup-text {
+  font-size: 14px;           
+  color: #666;               
+  margin-top: 10px;
+}
+
+.signup-text a {
+  text-decoration: none;     
+  color: #4CAF50;            
+}
+
+.signup-text a:hover {
+  text-decoration: underline; 
+}
+
+
+
+.place-container {
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;         
+  gap: 40px;             
+  padding: 20px 30px;
+  width: fit-content;
+  margin-top: 30px;
+}
+
+.top10 {
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+  padding: 30px 40px;
+  font-size: 18px;
+  font-weight: bold;
+  background-color: #fff; 
+  width: fit-content;
+}
+
+.top10 h3 {
+  margin-bottom: 10px;
+}
+
+.home-container2 {
+  display: flex;
 }
