--- a/src/components/Role/UserForm.css
+++ b/src/components/Role/UserForm.css
@@ -113,3 +113,20 @@
 .uploadInput {
     display: none;
 }
+
+.userInfoBtn--form {
+  padding: 10px 20px;
+  background-color: #lightseagreen;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-family: 'Malgun Gothic', sans-serif;
+  font-size: 16px;
+  vertical-align: middle; /* 버튼도 가운데 정렬 */
+}
+
+.userInfoBtn--form:hover {
+    background-color: rgb(41, 206, 198);
+    color: white;
+}
