--- a/src/components/Post/PostInfo.css
+++ b/src/components/Post/PostInfo.css
@@ -47,6 +47,10 @@
   margin-right: 20px;
 }
 
+.profileInfo:hover {
+  color: lightseagreen;
+}
+
 .travel-itinerary {
   display: flex;
   justify-content: space-between; 
@@ -223,17 +227,23 @@
 }
 
 .Image {
-  border: 2px none;
-  border-radius: 8px;
+  border: 2px solid transparent;
+  border-radius: 20px;
   background-color: #f5efef;
   padding: 10px;
-  display: flex;              
-  object-fit: cover;         
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  width: 100%;
+  height: 300px; 
   overflow: hidden; 
-  width: 100%; /* 이미지 너비를 카드 크기에 맞게 설정 */
-  height: 200px; /* 이미지 비율을 유지하면서 높이 자동 조정 */
-  max-height: 150px; /* 이미지 최대 높이 설정 */
-  margin-bottom: 10px; /* 이미지와 카드 내용 사이의 간격 */
+}
+
+.postInfoImage {
+  width: 100%; 
+  height: 100%; 
+  object-fit: cover; 
+  border-radius: 20px;
 }
 
 .info-box span {
