--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -281,6 +281,18 @@ $max-width: 1600px;
   margin-bottom: 2px;
 }
 
+.age {
+  font-size: 14px;
+  color: #666;
+  margin-bottom: 2px;
+}
+
+.gender {
+  font-size: 14px;
+  color: #666;
+  margin-bottom: 2px;
+}
+
 .home-participation {
   font-size: 14px;
   color: lightblue;
