--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@ td {
   padding: 30px;
   font-size: 16px;
   vertical-align: middle; /* 모든 셀의 내용을 가운데 정렬 */
-  background-color: #f4f2f0;
+  background-color: white;
 }
 
 .input-field, .textarea-field {
@@ -84,4 +84,15 @@ td {
   font-size: 32px;
   font-family: 'Malgun Gothic', sans-serif;
   margin-right: auto; /* 왼쪽에 위치 */
+}
+
+.btn-admin {
+  padding: 10px 15px;
+  background-color: lightseagreen;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin-bottom: 15px;
 }
