--- a/src/components/Role/UserForm.css
+++ b/src/components/Role/UserForm.css
@@ -64,6 +64,10 @@
   font-size: 14px;
 }
 
+.btn_my_self:hover {
+    transform: scale(1.03);
+}
+
 .update_user_btn {
   display: flex;
   background-color: white;
@@ -76,6 +80,10 @@
   border: 1px solid rgb(0, 206, 124);
   border-radius: 4px;
   margin: 20px 0;
+}
+
+.update_user_btn:hover {
+    transform: scale(1.03);
 }
 
 .tabs {
@@ -117,6 +125,10 @@
   text-align: center;
 }
 
+.user-parti p {
+  font-size: 0.9em;
+}
+
 .user-post-btn {
   padding: 12px 24px;
   font-size: 16px;
@@ -133,35 +145,38 @@
   margin-top: 20px;
 }
 
+.user-post-btn:hover {
+    transform: scale(1.03);
+}
+
 .postCards {
-    display: inline-block;
-    width: 100%;
-  }
-  
-  .postCard {
-    width: 100%;
-    height: 100px;
-    border: 1px solid #ddd;
-    padding: 15px;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-    transition: box-shadow 0.3s ease;
-    margin-bottom: 20px;
-  }
-  
-  .postCard:hover {
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-  }
-  
-  .postCard h3 {
-    font-size: 1.2em;
-    margin: 0 0 10px;
-  }
-  
-  .postCard p {
-    color: #555;
-    font-size: 0.9em;
-    margin: 5px 0;
-  }
-  
+  display: inline-block;
+  width: 100%;
+}
+
+.postCard {
+  width: 100%;
+  height: 100px;
+  border: 1px solid #ddd;
+  padding: 15px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: box-shadow 0.3s ease;
+  margin-bottom: 20px;
+}
+
+.postCard:hover {
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.postCard h3 {
+  font-size: 1.2em;
+  margin: 0 0 10px;
+}
+
+.postCard p {
+  color: #555;
+  font-size: 0.9em;
+  margin: 5px 0;
+}
