--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -230,7 +230,7 @@ $max-width: 1600px;
   margin-top: 47px;
 }
 
-.login-wrapper {
+.home-login-wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
