--- a/src/components/Post/PostInfo.css
+++ b/src/components/Post/PostInfo.css
@@ -366,7 +366,25 @@
 }
 
 .followButton:hover {
-  background-color: #20b2aa;
   transform: scale(1.03);
 }
 
+.followCancelButton {
+  display: block;
+  width: 100%;
+  padding: 12px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff;
+  background-color: red;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.followCancelButton:hover {
+  transform: scale(1.03);
+}
