--- a/src/components/Role/UserForm.css
+++ b/src/components/Role/UserForm.css
@@ -47,11 +47,27 @@
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.02);
 }
 
+.follow {
+  display: flex;
+  background-color: white;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 11px;
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.02);
+  text-align: left;
+  flex-grow: 1;
+  font-size: 16px;
+  color: black;
+}
+
 .my_self {
   text-align: left;
   flex-grow: 1;
   font-size: 16px;
-  color: gray;
+  color: black;
 }
 
 .btn_my_self {
@@ -74,7 +90,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 34px;
+  height: 45px;
   font-size: 14px;
   color: rgb(0, 206, 124);
   border: 1px solid rgb(0, 206, 124);
@@ -109,6 +125,7 @@
 .tab-button.active {
   background-color: lightseagreen;
   color: white;
+  font-size: 18px;
 }
 
 .tab-content {
@@ -117,7 +134,7 @@
   padding: 20px;
   border: 1px solid lightgray;
   border-radius: 8px;
-  background-color: #f9f9f9;
+  background-color: white;
 }
 
 .userInfo-post,
@@ -157,7 +174,7 @@
 .postCard {
   width: 100%;
   height: 100px;
-  border: 1px solid #ddd;
+  border: 1px solid lightgray;
   padding: 15px;
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -177,6 +194,13 @@
 
 .postCard p {
   color: #555;
-  font-size: 0.9em;
+  font-size: 16px;
   margin: 5px 0;
+  display: flex;
+  align-items: center;
 }
+
+.postCard p .icon {
+  margin-right: 8px;
+}
+
