--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -2,7 +2,11 @@
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
 
-$max-width: 1600px;
+.HomeContainer{
+  font-family: 'Malgun Gothic', sans-serif;
+  width: 1600px;
+  margin: 50px auto;
+}
 
 // 애니메이션
 @keyframes smoothAppear {
@@ -25,28 +29,34 @@ $max-width: 1600px;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  max-width: $max-width;
+  height: 350px;
   margin: 0 auto;
   font-family: 'Noto Sans KR', sans-serif;
   font-size: 1.5rem;
   margin-top: 60px;
 
+  background-image: url('/backImage.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  overflow: hidden;
 
-  .home-title {
-    animation: smoothAppear 1s forwards;
-    animation-delay: 0.5s;
-    margin: 15px 0;
-    font-size: 2.0rem;
-    font-weight: bold;
-    color: black;
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
 
-    span {
-      font-size: 2.0rem;
-      font-family: "Jua", sans-serif;
-      font-weight: 400;
-      font-style: normal;
-      color: black;
-    }
+  /* 텍스트나 버튼들을 겹치기 위해 z-index 설정 */
+  .home-title, .home-contents, .write-post-btn {
+    position: relative;
+    z-index: 2;
+    color: white;
   }
 
   .home-contents {
@@ -54,7 +64,7 @@ $max-width: 1600px;
     animation-delay: 1s;
     margin: 15px 0;
     font-size: 1.5rem;
-    color: #282c34;
+    color: white;
   }
 
   .write-post-btn {
@@ -91,7 +101,7 @@ $max-width: 1600px;
 .layout-container {
   display: grid;
   grid-template-columns: 2fr 1fr;
-  max-width: $max-width;
+  max-width: 1600px;
   gap: 20px;
   margin: 0 auto;
   margin-top: 20px;
@@ -359,7 +369,7 @@ $max-width: 1600px;
   background-color: white; 
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin-top: 50px;
-  max-width: $max-width;
+  max-width: 1600px;
   width: 80%;
 }
 
